fix: Move the transcript/summary to the left for more readability

--- a/internal/http/static/style.css
+++ b/internal/http/static/style.css
@@ -98,6 +98,10 @@ p {
     font-weight: bold;
 }
 
+.text-left {
+    text-align: left;
+}
+
 @media (max-width: 600px) {
     #transcriptionQueue thead {
         display: none;
